--- a/tests/aframe/index.html
+++ b/tests/aframe/index.html
@@ -10,7 +10,7 @@
             <a-entity
             visible
             id="banner1"
-            zesty-banner="adUnit: 00000000-0000-0000-0000-000000000000; format: medium-rectangle; height: 1; beacon: true"
+            zesty-banner="adUnit: 00000000-0000-0000-0000-000000000000; format: medium-rectangle; height: 1; beacon: true; customDefaultImage: https://picsum.photos/300/250; customDefaultCtaUrl: https://www.example.com"
             position="0 2 -2"></a-entity>
             <a-entity
             visible
