--- a/tests/playcanvas/index.html
+++ b/tests/playcanvas/index.html
@@ -58,17 +58,19 @@
       app.root.addChild(light);
 
       // create a banner
-      const createBanner = (adUnitId, format) => {
+      const createBanner = (adUnitId, format, customDefaultImage = null, customDefaultCtaUrl = null) => {
         const banner = new pc.Entity();
         banner.addComponent('script');
         banner.script.create('zesty-banner');
         banner.script['zesty-banner'].adUnitId = adUnitId;
         banner.script['zesty-banner'].format = format;
         banner.script['zesty-banner'].cameraEntity = camera;
+        banner.script['zesty-banner'].customDefaultImage = customDefaultImage;
+        banner.script['zesty-banner'].customDefaultCtaUrl = customDefaultCtaUrl;
         banner.setEulerAngles(90, 0, 0);
         return banner;
       }
-      const banner1 = createBanner('00000000-0000-0000-0000-000000000000', 1);
+      const banner1 = createBanner('00000000-0000-0000-0000-000000000000', 1, 'https://picsum.photos/300/250', 'https://www.example.com');
       banner1.setPosition(0, 1, -2);
       const banner2 = createBanner('10000000-0000-4000-8000-000000000000', 2);
       banner2.setPosition(0, 0, -2);
