--- a/tests/threejs/index.html
+++ b/tests/threejs/index.html
@@ -41,7 +41,10 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      const banner = new ZestyBanner("00000000-0000-0000-0000-000000000000", 'medium-rectangle', 'standard', 1, renderer);
+      const banner = new ZestyBanner("00000000-0000-0000-0000-000000000000", 'medium-rectangle', 'standard', 1, renderer, false, {
+        customDefaultImage: 'https://picsum.photos/300/250',
+        customDefaultCtaUrl: 'https://www.example.com'
+      });
       banner.position.set(0, 1, -2);
       scene.add(banner);
 
@@ -64,7 +67,7 @@
           var intersects = raycaster.intersectObjects(scene.children);
           intersects.forEach(obj => {
               if (obj.object.type == "ZestyBanner") {
-                  banner.onClick();
+                  obj.object.onClick();
               }
           })
       }
