--- a/tests/web/index.html
+++ b/tests/web/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <div>
-        <zesty-web id="banner1" ad-unit="999999" format="tall" bannerstyle="standard" width="300px"></zesty-web>
-        <zesty-web id="banner2" ad-unit="999999" format="wide" bannerstyle="standard" width="300px"></zesty-web>
-        <zesty-web id="banner3" ad-unit="999999" format="square" bannerstyle="standard" width="300px"></zesty-web>
-        <zesty-web id="banner4" ad-unit="999999" format="tall" bannerstyle="minimal" width="300px"></zesty-web>
-        <zesty-web id="banner5" ad-unit="999999" format="wide" bannerstyle="minimal" width="300px"></zesty-web>
-        <zesty-web id="banner6" ad-unit="999999" format="square" bannerstyle="minimal" width="300px"></zesty-web>
-        <zesty-web id="banner7" ad-unit="999999" format="tall" bannerstyle="transparent" width="300px"></zesty-web>
-        <zesty-web id="banner8" ad-unit="999999" format="wide" bannerstyle="transparent" width="300px"></zesty-web>
-        <zesty-web id="banner9" ad-unit="999999" format="square" bannerstyle="transparent" width="300px"></zesty-web>
+        <zesty-web id="banner1" ad-unit="999999" format="tall" width="300px"></zesty-web>
+        <zesty-web id="banner2" ad-unit="999999" format="wide" width="300px"></zesty-web>
+        <zesty-web id="banner3" ad-unit="999999" format="square" width="300px"></zesty-web>
+        <zesty-web id="banner4" ad-unit="999999" format="tall" width="300px"></zesty-web>
+        <zesty-web id="banner5" ad-unit="999999" format="wide" width="300px"></zesty-web>
+        <zesty-web id="banner6" ad-unit="999999" format="square" width="300px"></zesty-web>
+        <zesty-web id="banner7" ad-unit="999999" format="tall" width="300px"></zesty-web>
+        <zesty-web id="banner8" ad-unit="999999" format="wide" width="300px"></zesty-web>
+        <zesty-web id="banner9" ad-unit="999999" format="square" width="300px"></zesty-web>
     </div>
   </body>
 </html>
