fix: Gate live prebid scripts if on localhost, update tests

--- a/tests/threejs/index.html
+++ b/tests/threejs/index.html
@@ -5,8 +5,8 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
-          "three/examples/jsm/webxr/VRButton": "https://unpkg.com/three@0.148.0/examples/jsm/webxr/VRButton"
+          "three": "./three.module.js",
+          "three/examples/jsm/webxr/VRButton": "./VRButton.js"
         }
       }
     </script>
@@ -42,7 +42,7 @@
       document.body.appendChild(renderer.domElement);
 
       const banner = new ZestyBanner("00000000-0000-0000-0000-000000000000", 'medium-rectangle', 'standard', 1, renderer, false, {
-        customDefaultImage: 'https://picsum.photos/300/250',
+        customDefaultImage: 'http://localhost:8080/assets/zesty-ad-square.png',
         customDefaultCtaUrl: 'https://www.example.com'
       });
       banner.position.set(0, 1, -2);
