tests: Update test projects

--- a/tests/babylonjs/index.html
+++ b/tests/babylonjs/index.html
@@ -47,7 +47,8 @@
                     customDefaultImage: "https://picsum.photos/300/250",
                     customDefaultCtaUrl: "https://www.example.com",
                     modalTrigger: "lose",
-                    modalDelay: 5000
+                    modalBackground: true,
+                    modalDelay: 5000,
                 });
                 zestyBanner1.position = new BABYLON.Vector3(0, 2, 2);
 
