--- a/tests/threejs/index.html
+++ b/tests/threejs/index.html
@@ -45,6 +45,7 @@
         customDefaultImage: 'http://localhost:8080/assets/zesty-ad-square.png',
         customDefaultCtaUrl: 'https://www.example.com',
         modalTrigger: 'lose',
+        modalBackground: true,
         modalDelay: 5000
       });
       banner.position.set(0, 1, -2);
